--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <title>Home</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
+    <h1>Welcome to home page!</h1>
 
+    <a href="/admin"><input type="button" value="Go to table"></a>
+
+    <br/>
+    <br/>
+    <a th:href="@{/login}"><input type="button" value="Login"></a>
+    <br/>
+    <br/>
+    <a th:href="@{/logout}"><input type="button" value="Logout"></a>
 
 </body>
 </html>
