--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,31 +2,87 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>User</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h1>User, welcome spring boot security page!</h1>
 
-    <table border="1">
-        <thead>
-        <tr>
-            <th>Username</th>
-            <th>Password</th>
-            <th>Email</th>
-            <th>Age</th>
+    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/cdb.min.js"></script>
+    <style>
+        /* Дополнительные стили для подсветки кнопок */
+        .a_btn.active {
+            background-color: #0d6efd !important; /* Цвет активной кнопки (синий) */
+            color: #fff !important; /* Цвет текста активной кнопки (белый) */
+        }
 
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td th:text="${user.username}"></td>
-            <td th:text="${user.password}"></td>
-            <td th:text="${user.email}"></td>
-            <td th:text="${user.age}"></td>
-        </tr>
-        </tbody>
-    </table>
+    </style>
 
-    <br/>
-    <a th:href="@{/logout}"><input type="button" value="Logout"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
+                <div>
+                    <span class="navbar-text">
+                        <span class="font-weight-bold text-white" th:text="${user.email}"></span>
+                        <span>with roles: </span>
+                    </span>
+                    <span class="navbar-text">
+                            <span class="font-weight-bold text-white" th:if="${isAdmin}">ADMIN</span>
+                            <span class="font-weight-bold text-white">USER</span>
+                    </span>
+                </div>
+                <form th:action="@{/logout}" method="post">
+                    <button type="submit" class="btn btn-dark">Logout</button>-->
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2 d-flex flex-column px-0">
+                <div class="d-grid col-12 mt-4">
+                    <a class="nav-link text-primary d-flex btn btn-light justify-content-start a_btn" th:href="@{/admin}" th:if="${isAdmin}" id="adminLink">Admin</a>
+                    <a class="nav-link active text-white d-flex btn btn-light justify-content-start a_btn" th:href="@{/user}" id="userLink">User</a>
+                </div>
+
+            </div>
+            <div class="col-10 px-0">
+                <div class="container-fluid px-4 py-4">
+                    <h1 class="mb-3">User information-page</h1>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="ms-2">About user</h4>
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">Username</th>
+                                    <th scope="col">Password</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">Age</th>
+                                    <th scope="col">Role</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td th:text="${user.id}"></td>
+                                    <td th:text="${user.username}"></td>
+                                    <td th:text="${user.password}"></td>
+                                    <td th:text="${user.email}"></td>
+                                    <td th:text="${user.age}"></td>
+                                    <td th:text="${user.roles}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
