--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,17 +5,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-
     <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/cdb.min.js"></script>
     <style>
-        /* Дополнительные стили для подсветки кнопок */
         .a_btn.active {
-            background-color: #0d6efd !important; /* Цвет активной кнопки (синий) */
-            color: #fff !important; /* Цвет текста активной кнопки (белый) */
+            background-color: #0d6efd !important;
+            color: #fff !important;
         }
-
     </style>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -40,13 +37,14 @@
 
     <div class="container-fluid">
         <div class="row">
+
             <div class="col-2 d-flex flex-column px-0">
                 <div class="d-grid col-12 mt-4">
                     <a class="nav-link text-primary d-flex btn btn-light justify-content-start a_btn" th:href="@{/admin}" th:if="${isAdmin}" id="adminLink">Admin</a>
                     <a class="nav-link active text-white d-flex btn btn-light justify-content-start a_btn" th:href="@{/user}" id="userLink">User</a>
                 </div>
-
             </div>
+
             <div class="col-10 px-0">
                 <div class="container-fluid px-4 py-4">
                     <h1 class="mb-3">User information-page</h1>
