--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -6,12 +6,9 @@
     <title>Admin panel</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script type="text/javascript" src="../static/script.js" th:src="@{/script.js}"></script>
+
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/cdb.min.js"></script>
     <style>
         .a_btn.active {
             background-color: #0d6efd !important; /* Цвет активной кнопки (синий) */
@@ -68,7 +65,7 @@
                                     <h4 class="ms-2">All users</h4>
                                 </div>
                                 <div class="card-body">
-                                    <table class="table table-striped">
+                                    <table class="table table-striped" id="userTable">
                                         <thead>
                                         <tr>
                                             <th scope="col">ID</th>
@@ -83,123 +80,6 @@
                                         </thead>
                                         <tbody>
 
-                                        <tr th:each="user : ${users}">
-                                            <td scope="row" th:text="${user.id}"></td>
-                                            <td scope="row" th:text="${user.username}"></td>
-                                            <td scope="row" th:text="${user.password}"></td>
-                                            <td scope="row" th:text="${user.email}"></td>
-                                            <td scope="row" th:text="${user.age}"></td>
-                                            <td scope="row" th:text="${user.getRoleNames()}"></td>
-                                            <td>
-                                                <button type="button" class="btn btn-info text-light" data-bs-toggle="modal" th:data-bs-target="'#userEditDialog' + ${user.id}" th:attr="data-userId=${user.id}">
-                                                    Edit
-                                                </button>
-
-                                                <div class="modal fade" th:id="'userEditDialog' + ${user.id}" tabindex="-1" aria-labelledby="EditModalLabel" aria-hidden="true">
-                                                    <div class="modal-dialog">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h5 class="modal-title" id="EditModalLabel">Edit user</h5>
-                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                            </div>
-                                                            <form th:method="POST" th:action="@{/admin}" th:object="${user}">
-                                                                <div class="modal-body">
-                                                                    <input type="hidden" name="action" value="edit">
-                                                                    <input type="hidden" name="id" th:value="${user.id}">
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="username_edit" class="form-label fw-bold">Username</label>
-                                                                        <input type="text" name="username" class="form-control" id="username_edit" th:value="${user.username}" placeholder="Username">
-                                                                    </div>
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="password_edit" class="form-label fw-bold">Password</label>
-                                                                        <input type="password" name="password" class="form-control" id="password_edit" th:value="${user.password}" placeholder="Password">
-                                                                    </div>
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="email_edit" class="form-label fw-bold">Email</label>
-                                                                        <input type="email" name="email" class="form-control" id="email_edit" th:value="${user.email}" placeholder="Email">
-                                                                    </div>
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="age_edit" class="form-label fw-bold">Age</label>
-                                                                        <input type="number" name="age" class="form-control" id="age_edit" th:value="${user.age}" placeholder="Age">
-                                                                    </div>
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="roles_edit" class="form-label fw-bold">Roles</label>
-                                                                        <select multiple id="roles_edit" name="roles" class="form-control">
-                                                                            <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.getRoleName()}" th:selected="${user.roles.contains(role)}"></option>
-                                                                        </select>
-                                                                    </div>
-                                                                </div>
-
-                                                                <div class="modal-footer">
-                                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                                    <button type="submit" class="btn btn-primary">Edit</button>
-                                                                </div>
-                                                            </form>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <button type="button" class="btn btn-danger text-light" data-bs-toggle="modal" th:data-bs-target="'#userDeleteDialog' + ${user.id}" th:attr="data-userId=${user.id}">
-                                                    Delete
-                                                </button>
-
-                                                <div class="modal fade" th:id="'userDeleteDialog' + ${user.id}" tabindex="-1" aria-labelledby="DeleteModalLabel" aria-hidden="true">
-                                                    <div class="modal-dialog">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h5 class="modal-title" id="DeleteModalLabel">Delete user</h5>
-                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                            </div>
-                                                            <form th:method="POST" th:action="@{/admin}" th:object="${user}">
-                                                                <div class="modal-body">
-                                                                    <input type="hidden" name="action" value="delete">
-                                                                    <input type="hidden" name="id" th:value="${user.id}">
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="username_delete" class="form-label fw-bold">Username</label>
-                                                                        <input type="text" name="username" class="form-control" id="username_delete" th:value="${user.username}" placeholder="Username" disabled>
-                                                                    </div>
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="password_delete" class="form-label fw-bold">Password</label>
-                                                                        <input type="password" name="password" class="form-control" id="password_delete" th:value="${user.password}" placeholder="Password" disabled>
-                                                                    </div>
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="email_delete" class="form-label fw-bold">Email</label>
-                                                                        <input type="email" name="email" class="form-control" id="email_delete" th:value="${user.email}" placeholder="Email" disabled>
-                                                                    </div>
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="age_delete" class="form-label fw-bold">Age</label>
-                                                                        <input type="number" name="age" class="form-control" id="age_delete" th:value="${user.age}" placeholder="Age" disabled>
-                                                                    </div>
-
-                                                                    <div class="mb-3 d-flex flex-column align-items-center">
-                                                                        <label for="roles_delete" class="form-label fw-bold">Roles</label>
-                                                                        <select multiple id="roles_delete" name="roles" class="form-control" disabled>
-                                                                            <option value="ROLE_USER" th:selected="${user.roles.contains('ROLE_USER')}">USER</option>
-                                                                            <option value="ROLE_ADMIN" th:selected="${user.roles.contains('ROLE_ADMIN')}">ADMIN</option>
-                                                                        </select>
-                                                                    </div>
-                                                                </div>
-
-                                                                <div class="modal-footer">
-                                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                                                </div>
-                                                            </form>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </td>
-                                        </tr>
                                         </tbody>
                                     </table>
                                 </div>
@@ -253,6 +133,12 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/cdb.min.js"></script>
+    <script src="webjars/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" th:src="@{/js/app.js}"></script>
 </body>
 </html>
