--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -84,18 +84,16 @@
                                     </table>
                                 </div>
                             </div>
-
                         </div>
                         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                             <div class="card">
                                 <div class="card-header">
                                     <h4>Add new user</h4>
                                 </div>
-
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-3 mx-auto">
-                                            <form th:method="POST" th:action="@{/admin}">
+                                        <div class="col-3 mx-auto formNewUser">
+                                            <form id="addUserForm">
                                                 <input type="hidden" name="action" value="create">
                                                 <div class="mb-3 d-flex flex-column align-items-center">
                                                     <label for="username_create" class="form-label fw-bold">Username</label>
@@ -123,9 +121,11 @@
                                                     <button type="submit" class="btn btn-success w-50 p-2">Add new user</button>
                                                 </div>
                                             </form>
+
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -133,8 +133,21 @@
             </div>
         </div>
     </div>
-<!--    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
-    <!-- Bootstrap Bundle with Popper -->
+
+    <div class="modal fade" id="someDefaultModal" tabindex="-1" role="dialog" aria-labelledby="someDefaultModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer"></div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cdbootstrap/js/cdb.min.js"></script>
